<resources>
    <string name="app_name">Primagama</string>
    <string name="title_activity_homesiswa">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_homeortu">Homeortu</string>
    <string name="text_uang">Ruang :</string>
    <string name="jadwal">Jadwal</string>
    <string name="reqjadwal">Request Jadwal</string>
    <string name="absen">Absen</string>
    <string name="nilai">Nilai Try Out</string>
    <string name="profile">Profil</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="title_activity_siswareqjadwal">Siswareqjadwal</string>
    <string name="title_activity_nilai">Nilai</string>
    <string name="title_activity_absen">Absen</string>
    <string name="tab_absen_bulan_1">Jan</string>
    <string name="tab_absen_bulan_2">Feb</string>
    <string name="tab_absen_bulan_3">Mar</string>
    <string name="tab_absen_bulan_4">Apr</string>
    <string name="tab_absen_bulan_5">Mei</string>
    <string name="tab_absen_bulan_6">Jun</string>
    <string name="tab_absen_bulan_7">Jul</string>
    <string name="tab_absen_bulan_8">Ags</string>
    <string name="tab_absen_bulan_9">Sep</string>
    <string name="tab_absen_bulan_10">Okt</string>
    <string name="tab_absen_bulan_11">Nov</string>
    <string name="tab_absen_bulan_12">Des</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>


</resources>
