<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/jadwal" />
        <item
            android:id="@+id/reqjadwal"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/reqjadwal" />
        <item
            android:id="@+id/nav_absen"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/absen" />
        <item
            android:id="@+id/nav_nilai"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nilai" />
    </group>

    <item android:title="Lain-Lain">
        <menu>
            <item
                android:id="@+id/nav_profil"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/pengaturan" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_first_page_black_24dp"
        android:title="@string/log_out" />

</menu>
